--- a/DataTransformer.Core/DataTransformer.Core.csproj
+++ b/DataTransformer.Core/DataTransformer.Core.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DataTransformer.Models\DataTransformer.Models.csproj" />
     <ProjectReference Include="..\DataTransformer.Plugins\DataTransformer.Plugins.csproj" />
   </ItemGroup>
