--- a/DataTransformer.Core/DataTransformer.Core.csproj
+++ b/DataTransformer.Core/DataTransformer.Core.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DataTransformer.Models\DataTransformer.Models.csproj" />
     <ProjectReference Include="..\DataTransformer.Plugins\DataTransformer.Plugins.csproj" />
   </ItemGroup>
