Added some new plugins and pipelines

--- a/DataTransformer.DesktopApp/appSettings.json
+++ b/DataTransformer.DesktopApp/appSettings.json
@@ -6,6 +6,31 @@
         "DataTransformer.Plugins.AsciiPlugin, DataTransformer.Plugins",
         "DataTransformer.Plugins.Base64Plugin, DataTransformer.Plugins"
       ]
+    },
+    {
+      "name": "Unicode + Base64",
+      "plugins": [
+        "DataTransformer.Plugins.UnicodePlugin, DataTransformer.Plugins",
+        "DataTransformer.Plugins.Base64Plugin, DataTransformer.Plugins"
+      ]
+    },
+    {
+      "name": "UrlEncode",
+      "plugins": [
+        "DataTransformer.Plugins.UrlEncodePlugin, DataTransformer.Plugins"
+      ]
+    },
+    {
+      "name": "HtmlEncode",
+      "plugins": [
+        "DataTransformer.Plugins.HtmlEncodePlugin, DataTransformer.Plugins"
+      ]
+    },
+    {
+      "name": "JavaScriptStringEncode",
+      "plugins": [
+        "DataTransformer.Plugins.JavaScriptStringEncodePlugin, DataTransformer.Plugins"
+      ]
     }
   ]
 }
